2013-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.cpp:
	* NodePropertiesEditor.cpp: 

2013-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DConsoleInterface.h:
	* X3DConsoleInterface.cpp:
	* X3DLibraryViewInterface.h:
	* X3DLibraryViewInterface.cpp:
	* X3DOutlineEditorInterface.h:
	* X3DViewpointListInterface.h:
	* X3DHistoryEditorInterface.h:
	* X3DBrowserWindowInterface.h:
	* X3DViewpointListInterface.cpp:
	* X3DOutlineTreeViewInterface.h:
	* X3DOutlineEditorInterface.cpp:
	* X3DHistoryEditorInterface.cpp:
	* X3DBrowserWindowInterface.cpp:
	* NodePropertiesEditor.cpp:
	* X3DMotionBlurEditorInterface.h:
	* X3DOutlineTreeViewInterface.cpp:
	* X3DMotionBlurEditorInterface.cpp:
	* X3DNodePropertiesEditorInterface.h:
	* X3DNodePropertiesEditorInterface.cpp: 

2013-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* X3DBaseInterface.h:
	* X3DUserInterface.h:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* X3DBaseInterface.cpp:
	* X3DBrowserEditor.h:
	* info.wrl:
	* X3DBrowserWidget.h:
	* LibraryView.cpp:
	* X3DBrowserWidget.cpp:
	* X3DBrowserEditor.cpp:
	* PTN57F.ttf:
	* PTN77F.ttf:
	* OutlineEditor.cpp:
	* ViewpointList.cpp:
	* HistoryEditor.cpp:
	* OutlineSelection.h:
	* OutlineTreeModel.h:
	* OutlineTreeModel.cpp:
	* Oswald-Bold.ttf:
	* OutlineSelection.cpp:
	* Oswald-Light.ttf:
	* Oswald-Regular.ttf:
	* MotionBlurEditor.cpp:
	* Oswald-Stencil.ttf:
	* OutlineTreeViewEditor.cpp:
	* PT Free Font License.txt:
	* SIL Open Font License.txt:
	* NodePropertiesEditor.cpp:
	* OutlineCellRenderer.h:
	* Apache License.txt:
	* OutlineCellRenderer.cpp:
	* OpenSans-CondBold.ttf:
	* OpenSans-CondLight.ttf:
	* OpenSans-CondLightItalic.ttf: 

2013-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseInterface.h: 

2013-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseInterface.h:
	* info.wrl:
	* Oswald-Bold.ttf:
	* Oswald-Bold.otf:
	* Oswald-Light.ttf:
	* Oswald-Light.otf:
	* Oswald-Stencil.otf: